--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
+.DS_Store
 node_modules
-data.xlsx
-data2.xlsx
-age-experience.xlsx
-package-lock.xlsx
-/~$data.xlsx
-/~$data2.xlsx
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
 .idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
