--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "exceljs": "^3.1.0",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "shortid": "^2.2.15"
   }
 }
