--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,8 +1,9 @@
 node_modules
-data.xlsx
-data2.xlsx
-age-experience.xlsx
+examples/data.xlsx
+examples/data2.xlsx
+examples/age-experience.xlsx
 package-lock.xlsx
 /~$data.xlsx
 /~$data2.xlsx
+/~$data3.xlsx
 .idea
