--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "exceljs": "^3.1.0",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
+    "parse-fn-args": "^1.0.1",
     "shortid": "^2.2.15"
   }
 }
