--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "exceljs": "^3.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "formidable": "^1.2.1",
+    "mocha": "^6.2.2",
     "parse-fn-args": "^1.0.1",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "sinon": "^7.5.0"
   }
 }
